Revert any unnecessary changes to use Set.copyOf. Cleanup of redundant public keyword in GraphStepInterface.